#7 Allowing usage of preview features in test run